Wed Jun 14 14:48:07 UTC 2006  Wallace Zhang  <zhangw@ociweb.com>

        * tests/ORB_Local_Config/ORB_Local_Config.mwc:

          Removed the nonexistent Limits directory from
          the workspace. This should correct the setup
          error shown on Win2003_VC71_Debug hosted by OCI.

Tue Jun 13 15:24:52 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp
        * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h

          Removed orb, added LogMgr argument to constructor.

          Changed constructor to create a new log-channel specific poa
          for iterators.  Activate iterators in the new poa.

          Changed destructor to destroy the new poa, which ensures any
          interators that may exist will be destroyed at the same time
          as the log channel.  This fixes bugzilla bug #2551.

        * orbsvcs/orbsvcs/Log/Hash_LogStore.cpp
        * orbsvcs/orbsvcs/Log/Hash_LogStore.h

          Removed orb argument from constructor.
          Changed to pass LogMgr to Hash_LogRecordStore constructor.

        * orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.cpp:

          Changed to pass only LogMgr to Hash_LogStore constructor.

        * orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.cpp:
        * orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.h:
        * orbsvcs/orbsvcs/Log/Log_Persistence_Strategy.h:

          Removed orb argument from create_log_store().

        * orbsvcs/orbsvcs/Log/LogMgr_i.cpp
        * orbsvcs/orbsvcs/Log/LogMgr_i.h

          Added orb(), factory_poa(), and log_poa() methods.  We're
          changing most objects to have a reference to the LogMgr, so we
          don't have pass orbs and poas around, especially for the cases
          where we're already passing the LogMgr.

          Changed to pass only "this" to strategy's create_log_store()
          method.

Tue Jun 13 14:56:01 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
